# ftpdata

./: .gitignore  README.md  setup.cfg  setup.py
ftpdata/: Navigator.py  QueryResult.py  __init__.py  create_engine.py  exceptions.py  preset.py  util.py
testbench/: MockDB.py  preset_a.py  preset_sample.py  preset_sample_wrong.py  test.py  test_engine.py  test_instance.py  test_preset.py  test_util.py
testbench/MockSFTP/: __init__.py
testbench/MockSFTP/testdata/: sample.csv
tests/: test.py
