[metadata]
name =ftpdata
author = Dexter Jung
maintainer=Dexter Jung
author_email = dropyourcoffee@gmail.com
description = A Simple ORM connector for file servers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dropyourcoffee/ftpdata
project_urls =
    Source = https://github.com/dropyourcoffee/ftpdata/
    Bug Tracker = https://github.com/dropyourcoffee/ftpdata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ftpdata
exclude = tests