[metadata]
name =ftpdata
author = Dexter Jung
maintainer=Dexter Jung
author_email = dropyourcoffee@gmail.com
description = A Simple ORM connector for file servers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dropyourcoffee/ftpdata
project_urls =
    Source = https://github.com/dropyourcoffee/ftpdata/
    Bug Tracker = https://github.com/dropyourcoffee/ftpdata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ftpdata
exclude = testbench

[flake8]
ignore = E201, E202, E203, E231, E226, E261, E302 E303, E501, E731, E741,
         F541, F841
         W605, W292, W293, W391
